UI/static/dashboard/scss/horizon.scss
/* ... */
/**** Resource Topology CSS ****/
.link {
  stroke: #999;
  stroke-width: 1.5px;
}
.node {
  cursor:pointer;
}
.node text {
  font: 12px sans-serif;
}

#resource_container {
  position:relative;
}
#stack_box {
  position: absolute;
  width: 300px;
  top: 10px;
  left: 10px;
}
#stack_box h3 {
  font-size: 11pt;
  line-height: 20px;
}
#stack_box p {
  margin: 0;
  font-size: 9pt;
  line-height: 14px;
}
#stack_box a {
  margin: 0;
  font-size: 9pt;
  line-height: 14px;
}
#stack_box img {
  float:left;
}
#stack_box #stack_info {
  float:left;
  white-space:normal;
  width:200px;
}

#info_box {
  position: absolute;
  width: 300px;
  top: 100px;
  left: 10px;
}
#info_box h3 {
  font-size: 9pt;
  line-height: 20px;
}
#info_box p {
  margin: 0;
  font-size: 9pt;
  line-height: 14px;
}
#info_box a {
  margin: 0;
  font-size: 9pt;
  line-height: 14px;
}
#info_box .error {
  color: darken($brand-danger, 20%);
}

/**** Customize Stack CSS ****/
#heat_topology {
  margin-left: 192px;
  border-width: 3px;
  border-style: solid;
  border-color: #dedede;
}

#detail_box {
  position: absolute;
  width: 195px;
  height: 100%;
  border-width: 3px;
  border-style: solid;
  border-color: #dedede;
  overflow: hidden;
}

#node_icon {
  float: left;
  height: 70px;
  width: 189px;
  margin-top: 10px;
}
#node_icon img {
  position: absolute;
  width: 70px;
  height: 70px;
  left: 50%;
  margin-left: -35px;
}

#node_info {
  float: left;
  width: 189px;
  padding: 10px;
  word-break:break-all
}
#node_info h3 {
  font-size: 12pt;
  font-weight: bold;
  line-height: 20px;
  text-align: center;
  border-bottom:1px solid #DEDEDE;
  padding: 5px;
  margin: 0px;
}
#node_info h4 {
  font-size: 10pt;
  font-weight: bold;
  line-height: 16px;
  text-align: center;
}
#node_info p {
  margin: 0;
  font-size: 9pt;
  line-height: 14px;
  text-align: center;
}
#node_info a {
  margin: 0;
  font-size: 9pt;
  line-height: 14px;
}

#opt_bar {
  float: left;
  width: 189px;
  padding: 10px;
}
#opt_bar a{
  margin-left: 9px;
  width: 70px;
}

/* Styling for dynamic scroll bar */
.ps-container .ps-scrollbar-x-rail {
    position: absolute; /* please don't change 'position' */
    bottom: 3px; /* there must be 'bottom' for ps-scrollbar-x-rail */
    height: 8px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    opacity: 0;
    filter: alpha(opacity = 0);
    -o-transition: background-color .2s linear, opacity .2s linear;
    -webkit-transition: background-color .2s linear, opacity .2s linear;
    -moz-transition: background-color .2s linear, opacity .2s linear;
    transition: background-color .2s linear, opacity .2s linear;
}

.ps-container:hover .ps-scrollbar-x-rail,
.ps-container.hover .ps-scrollbar-x-rail {
    opacity: 0.6;
    filter: alpha(opacity = 60);
}

.ps-container .ps-scrollbar-x-rail:hover,
.ps-container .ps-scrollbar-x-rail.hover {
    background-color: #eee;
    opacity: 0.9;
    filter: alpha(opacity = 90);
}

.ps-container .ps-scrollbar-x-rail.in-scrolling {
    background-color: #eee;
    opacity: 0.9;
    filter: alpha(opacity = 90);
}

.ps-container .ps-scrollbar-y-rail {
    position: absolute; /* please don't change 'position' */
    right: 3px; /* there must be 'right' for ps-scrollbar-y-rail */
    width: 8px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    opacity: 0;
    filter: alpha(opacity = 0);
    -o-transition: background-color .2s linear, opacity .2s linear;
    -webkit-transition: background-color .2s linear, opacity .2s linear;
    -moz-transition: background-color .2s linear, opacity .2s linear;
    transition: background-color .2s linear, opacity .2s linear;
}

.ps-container:hover .ps-scrollbar-y-rail,
.ps-container.hover .ps-scrollbar-y-rail {
    opacity: 0.6;
    filter: alpha(opacity = 60);
}

.ps-container .ps-scrollbar-y-rail:hover,
.ps-container .ps-scrollbar-y-rail.hover {
    background-color: #eee;
    opacity: 0.9;
    filter: alpha(opacity = 90);
}

.ps-container .ps-scrollbar-y-rail.in-scrolling {
    background-color: #eee;
    opacity: 0.9;
    filter: alpha(opacity = 90);
}

.ps-container .ps-scrollbar-x {
    position: absolute; /* please don't change 'position' */
    bottom: 0; /* there must be 'bottom' for ps-scrollbar-x */
    height: 8px;
    background-color: #aaa;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    -o-transition: background-color .2s linear;
    -webkit-transition: background-color.2s linear;
    -moz-transition: background-color .2s linear;
    transition: background-color .2s linear;
}

.ps-container.ie6 .ps-scrollbar-x {
    font-size: 0; /* fixed scrollbar height in xp sp3 ie6 */
}

.ps-container .ps-scrollbar-x-rail:hover .ps-scrollbar-x,
.ps-container .ps-scrollbar-x-rail.hover .ps-scrollbar-x {
    background-color: #999;
}

.ps-container .ps-scrollbar-y {
    position: absolute; /* please don't change 'position' */
    right: 0; /* there must be 'right' for ps-scrollbar-y */
    width: 8px;
    background-color: #aaa;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    -o-transition: background-color .2s linear;
    -webkit-transition: background-color.2s linear;
    -moz-transition: background-color .2s linear;
    transition: background-color .2s linear;
}

.ps-container.ie6 .ps-scrollbar-y {
    font-size: 0; /* fixed scrollbar height in xp sp3 ie6 */
}

.ps-container .ps-scrollbar-y-rail:hover .ps-scrollbar-y,
.ps-container .ps-scrollbar-y-rail.hover .ps-scrollbar-y {
    background-color: #999;
}

.ps-container.ie .ps-scrollbar-x,
.ps-container.ie .ps-scrollbar-y {
    visibility: hidden;
}

.ps-container.ie:hover .ps-scrollbar-x,
.ps-container.ie:hover .ps-scrollbar-y,
.ps-container.ie.hover .ps-scrollbar-x,
.ps-container.ie.hover .ps-scrollbar-y {
    visibility: visible;
}


/* Styling for draged firewall rule object */
#ruleListSortContainer {
  display: none;
}
/* ... */

